--- a/NewsClient/Views/NewsWindow.xaml
+++ b/NewsClient/Views/NewsWindow.xaml
@@ -89,7 +89,7 @@
                                                            Foreground="#999"/>
                                             </StackPanel>
                                             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
-                                                <Button Content="Редактировать" Click="EditNews_Click" 
+                                                <Button Content="Редактировать" Command="{Binding EditNewsCommand}" CommandParameter="{Binding}" 
                                                         Tag="{Binding DocumentId}"
                                                         Background="#2196F3" Foreground="White" 
                                                         Padding="8,3" Margin="0,0,10,0" BorderThickness="0"/>
